fixed results and modal on mobile

--- a/style.css
+++ b/style.css
@@ -69,8 +69,8 @@ body {
 }
 
 .modal-rules-img {
-  width: auto;
-  height: 60%;
+  width: 90%;
+  height: auto;
 }
 
 /* ---------- HEADER SECTION ---------- */
@@ -278,6 +278,11 @@ main {
 @media (min-width: 600px) {
   .duel-stage .scale {
     transform: scale(1.25);
+  }
+
+  .modal-rules-img {
+    width: 70%;
+    height: auto;
   }
 }
 
